--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-redux": "^7.2.6",
+    "reactjs-localstorage": "^1.0.1",
+    "redux": "^4.1.2",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
@@ -37,13 +41,16 @@
     "@testing-library/react": "11.2.7",
     "@types/electron-devtools-installer": "2.2.0",
     "@types/jest": "26.0.23",
+    "@types/node": "^17.0.4",
     "@types/react": "17.0.11",
-    "@types/react-dom": "17.0.8",
+    "@types/react-dom": "^17.0.11",
+    "@types/reactjs-localstorage": "^1.0.0",
     "@types/styled-components": "5.1.10",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
     "cross-env": "7.0.3",
+    "css-loader": "^6.5.1",
     "electron": "13.1.2",
     "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
@@ -58,6 +65,9 @@
     "jest": "27.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "27.0.3",
     "typescript": "4.3.4",
     "wait-on": "5.3.0"
