--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/js": "^6.5.95",
+    "@mdi/react": "^1.5.0",
     "@reduxjs/toolkit": "^1.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
