--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "reactjs-localstorage": "^1.0.1",
     "redux": "^4.1.2",
     "styled-components": "5.3.0"
